fix: text alignment and size of services desc

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2500,6 +2500,13 @@ html, body, .homepage-body {
     white-space: normal;
   }
 
+  .service-desc {
+    font-size: 15px !important;
+    text-align: justify !important;
+    line-height: 1.5;
+    margin-top: 10px !important;
+  }
+
   .service-wrapper {
     flex-direction: column !important;
     gap: 15px !important;
